[package]
name = "hyper-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "time", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
hyper_wasi = { version = "0.15.0", features = ["full"] }
tokio_wasi = { version = "1.23.0", features = ["io-util", "macros", "net", "time", "rt"] }